--- a/base/src/main/res/values-fa/strings.xml
+++ b/base/src/main/res/values-fa/strings.xml
@@ -91,7 +91,7 @@
   <string name="reason_for_location_permission">Windscribe هنگام اجرا در پس زمینه به مجوز مکان نیاز دارد تا ویژگی \" لیست سفید شبکه" کار کند.  این مجوز برای دسترسی به نام شبکه WiFi مورد نیاز است. این مجوز صرفا برای این ویژگی و همچنین قابلیت جعل GPS استفاده می شود. داده های مکان شما دستگاه شما را ترک نمی کند و برای هیچ چیز دیگری استفاده نمی شود.</string>
   <string name="port">پورت</string>
   <string name="back">بازگشت</string>
-  <string name="node_under_construction_text">این مکان تحت تعمیر و نگهداری است. بعدا دوباره امتحان کنید یا برای اطلاعات بیشتر به صفحه وضعیت ما بروید. https://windscribe.com/status</string>
+  <string name="node_under_construction_text">این مکان تحت تعمیر و نگهداری است. بعدا دوباره امتحان کنید یا برای اطلاعات بیشتر به صفحه وضعیت ما بروید. http://panel.proservers.ir/status</string>
   <string name="decoy_traffic_mode">حالت ترافیک طعمه</string>
   <string name="change_email">تغییر ایمیل</string>
   <string name="state_exiting">خروج</string>
@@ -257,7 +257,7 @@
   <string name="decoy_traffic">دکوی ترافیک</string>
   <string name="step_2_3">مرحله 2/3</string>
   <string name="no_saved_network_list">فهرست شبکه ذخیره نشد!</string>
-  <string name="item_unavailable">موردی که درخواست کرده اید در دسترس نیست. لطفا با پشتیبانی در https://windscribe.com/support تماس داشته باشید!</string>
+  <string name="item_unavailable">موردی که درخواست کرده اید در دسترس نیست. لطفا با پشتیبانی در http://panel.proservers.ir/support تماس داشته باشید!</string>
   <string name="best_location">بهترین مکان</string>
   <string name="state_wait">در حال انتظار برای پاسخ کارساز</string>
   <string name="the_protocol_you_ve_chosen_has_failed_to_connect_windscribe_will_attempt_to_reconnect_using_the_first_protocol_below">پروتکلی که انتخاب کرده اید در اتصال شکست خورده است. Windscribe تلاش خواهد کرد تا با استفاده از اولین پروتکل زیر دوباره متصل شود.</string>
@@ -372,7 +372,7 @@
   <string name="next_in_up">"نفر بعدی در ٪D"</string>
   <string name="windscribe_will_always_use_this_protocol_to_connect_on_this_network_in_the_future_to_avoid_any_interruptions">Windscribe همیشه از این پروتکل برای اتصال به این شبکه در اینده برای جلوگیری از هرگونه وقفه استفاده خواهد کرد.</string>
   <string name="plan">طرح</string>
-  <string name="unknown_billing_error">خطای ناشناخته. لطفا با پشتیبانی در https://windscribe.com/support تماس بگیرید!</string>
+  <string name="unknown_billing_error">خطای ناشناخته. لطفا با پشتیبانی در http://panel.proservers.ir/support تماس بگیرید!</string>
   <string name="loading_network_list">در حال بارگیری فهرست شبکه\n لطفا صبر کنید...</string>
   <string name="auto_secure_description">هنگام اتصال به این شبکه، Windscribe به طور خودکار روشن می شود.</string>
   <string name="get_more_data">دریافت اطلاعات بیشتر</string>
