--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -111,9 +111,9 @@
     <string name="please_login">Please login first to connect!</string>
     <string name="please_login_to_see_account_details">Sign up or Login to view your account details and safeguard your preferences.</string>
     <string name="billing_unavailable">Play billing is unavailable for this device</string>
-    <string name="item_unavailable">Item you requested is not available. \nPlease contact support at https://windscribe.com/support!</string>
+    <string name="item_unavailable">Item you requested is not available. \nPlease contact support at http://panel.proservers.ir/support!</string>
     <string name="billing_service_unavailable">Billing service unavailable. Please check your network connection and try again!</string>
-    <string name="unknown_billing_error">Unknown error. Please contact support at https://windscribe.com/support!</string>
+    <string name="unknown_billing_error">Unknown error. Please contact support at http://panel.proservers.ir/support!</string>
     <string name="fatal_error">Could not connect to the billing service&#8230;Please check your network connection!</string>
     <string name="play_store_generic_api_error">Unexpected response received from Play store. This may happen due to recently cancelled purchases. Try again later.</string>
     <string name="unable_to_process_request">We were unable to process your request. Please try again!</string>
@@ -341,7 +341,7 @@
     <string name="Error">Error</string>
     <string name="text_account_set_up">Sign Up</string>
     <string name="xpress_login">Lazy Login</string>
-    <string name="web_login_description">Go to <b>https://windscribe.com/lazy</b> on any device and enter the code below.</string>
+    <string name="web_login_description">Go to <b>http://panel.proservers.ir/lazy</b> on any device and enter the code below.</string>
     <string name="app_login_description">Using your Windscribe Android app on your phone or tablet, go to Preferences (Top left), under “Account” choose “Lazy Login” and enter the code below.</string>
     <string name="or">OR</string>
     <string name="generate_code">Generate Code</string>
@@ -358,7 +358,7 @@
     <string name="windflix">Windflix</string>
     <string name="static_ip">Static IP</string>
     <string name="disconnect_alert_no_network">Windscribe VPN tunnel is paused due to no network connectivity - please check your network settings</string>
-    <string name="node_under_construction_text">This Location is Under Maintenance. Try again later or go to our Status page for more info. https://windscribe.com/status</string>
+    <string name="node_under_construction_text">This Location is Under Maintenance. Try again later or go to our Status page for more info. http://panel.proservers.ir/status</string>
     <string name="load_loading">Loading</string>
     <string name="load_nothing_found">Nothing to see here</string>
     <string name="load_error">Error loading.</string>
