--- a/base/src/main/res/values-fa/strings.xml
+++ b/base/src/main/res/values-fa/strings.xml
@@ -7,6 +7,9 @@
   <string name="appearance_description">روشن یا تاریک. یک طرف را انتخاب کنید و عاقلانه انتخاب کنید.</string>
   <string name="potential_data_use">استفاده از داده های تخمینی</string>
   <string name="username_empty">نام کاربری خالی!</string>
+  <string name="create_test_account">ساخت حساب ازمایشی (رایگان)</string>
+  <string name="create_test_account_email">ایمیل شما</string>
+  <string name="create_test_account_confirm">ساخت حساب</string>
   <string name="state_reconnecting">در حال اتصال مجدد</string>
   <string name="new_protocol">نوع پروتکل را انتخاب کنید</string>
   <string name="optional">(اختیاری)</string>
