--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="sign_out">Sign Out</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="create_test_account">Create test account (for free)</string>
+    <string name="create_test_account_email">Your email</string>
+    <string name="create_test_account_confirm">Create account</string>
     <string name="new_protocol">Select new protocol</string>
     <string name="login_with_username">No special characters or emails allowed in the username field.</string>
     <string name="weak_password">Your Password must contain at least one uppercase and lowercase.</string>
