--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -429,7 +429,8 @@ last chosen location.</string>
     <string name="if_you_go_pro_they_ll_go_pro_too">If you go Pro, they’ll go Pro too!</string>
     <string name="protocol_change_is_not_available_for_custom_config">Protocol change is not available for Custom Configs.</string>
     <string name="disconnect">Disconnect</string>
-    <string name="emergency_connect">Emergency Connect</string>
+    <string name="emergency_connect">Create test account</string>
+    <string name="em_login">Test login</string>
     <string name="emergency_connect_description">Can’t access Windscribe? Connect to our servers to unblock your restrictive network.</string>
     <string name="emergency_connected_description">You are now connected to Windscribe server. Try to login again.</string>
     <string name="current_network">CURRENT NETWORK</string>
