add url to rate dialog

--- a/base/src/main/res/values-fa/strings.xml
+++ b/base/src/main/res/values-fa/strings.xml
@@ -49,7 +49,7 @@
   <string name="allowing">امکان</string>
   <string name="auto_secure_description_secondary">اتصال خودکار در این شبکه Wi-Fi به
 اخرین مکان انتخاب شده</string>
-  <string name="rate_message">ایا از Windscribe لذت می برید؟ البته که هستی. ما را در فروشگاه Play ارزیابی کنید و ما شما را برای مدت طولانی دوست خواهیم داشت.</string>
+  <string name="rate_message">ایا از Windscribe لذت می برید؟ البته که هستی. ما را در Telegram ارزیابی کنید و ما شما را برای مدت طولانی دوست خواهیم داشت.</string>
   <string name="billing_unavailable">صدور صورت داد بازی برای این دستگاه در دسترس نیست</string>
   <string name="benefits">مزایای</string>
   <string name="support">پشتیبانی</string>
