--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -146,7 +146,7 @@
     <string name="rate_the_app">Rate Windscribe</string>
     <string name="may_be_later">Maybe Later</string>
     <string name="never_ask_again">Go Away</string>
-    <string name="rate_message">Are you enjoying Windscribe? Sure you are. Rate us in the Play Store, and we’ll love you long time.</string>
+    <string name="rate_message">Are you enjoying Windscribe? Sure you are. Rate us in the Telegram, and we’ll love you long time.</string>
     <string name="gps_spoofing_explain">This feature requires you to modify your android settings. Please follow the next few steps to activate it.</string>
     <string name="let_s_do_it">Let\'s do it</string>
     <string name="unlock_developer_mode">Unlock Developer  Options</string>
